Dodano pliki do deploymentu

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Todo + XP System{% endblock %}
+{% block title %}Todo Flow{% endblock %}
 
 {% block body %}
     <h1>Todo Flow</h1>
