--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-       <title>{% block title %}Todo App{% endblock %}</title>
+       <title>{% block title %}Todo Flow{% endblock %}</title>
+     <link rel="icon" href="/static/favicon.png" type="image/png">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
     <meta charset="UTF-8">
