--- a/templates/update.html
+++ b/templates/update.html
@@ -4,6 +4,6 @@
     <h1>Todo Flow</h1>
     <form action="{{ url_for('update', id=task.id) }}" method="POST">
         <input type="text" name="content" placeholder="Zaaktualizuj zadanie" required value="{{task.content}}">
-        <button type="submit">Zaaktualizuj</button>
+        <button type="submit">Zaktualizuj</button>
     </form>
 {% endblock %}
